--- a/css/media.css
+++ b/css/media.css
@@ -204,6 +204,6 @@
         background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-            url(../images/people-office-2x.jpg);
+            url(../images/background/people-office@2x.jpg);
     }
 }
