--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ section {
     background-image: linear-gradient(to bottom,
             rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
-        url(../images/people-office.jpg);
+        url(../images/background/bg-photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
